[package]
name = "fltk-evented"
version = "0.4.0"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Listener widgets for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-evented"
documentation = "https://docs.rs/fltk-evented"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[package.metadata."docs.rs"]
features = ["tokio"]

[dependencies]
fltk = "1.4"
tokio = { version = "1", features = ["rt"], optional = true }
async-std = { version = "1", optional = true }

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
