[package]
name = "fltk-evented"
version = "0.3.3"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Listener widgets for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-evented"
documentation = "https://docs.rs/fltk-evented"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[package.metadata.docs.rs]
features = ["tokio"]

[dependencies]
fltk = "1.4"
tokio = { version = "1", features = ["rt"], optional = true }
async-std = { version = "1", optional = true }

[features]
default = []

[[example]]
name = "tokio_ex"
doc-scrape-examples = true
required-features = [ "tokio" ]

[[example]]
name = "async_std_ex"
required-features = [ "async-std" ]

[dev-dependencies]
# for doctest of feature tokio and example tokio_ex
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"

# for example async_std_ex
async-std = { version = "1", features = ["attributes"] }
surf = "2"
