[package]
name = "fltk-evented"
version = "0.5.1"
edition = "2021"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Listener widgets for fltk-rs"
repository = "https://github.com/fltk-rs/fltk-evented"
documentation = "https://docs.rs/fltk-evented"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[features]
default = []

[dependencies]
fltk = "1.4.24"
tokio = { version = "1", features = ["rt"], optional = true }
async-std = { version = "1", optional = true }

[[example]]
path = "examples/tokio_ex"
name = "tokio_ex"
doc-scrape-examples = true
required-features = ["tokio"]

[[example]]
path = "examples/async_std_ex"
name = "async_std_ex"
required-features = ["async-std"]

[package.metadata.docs.rs]
features = ["tokio"]
rustdoc-args = ["--cfg", "docsrs"]