[package]
name = "tokio_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk-evented = { path = "../..", features = ["tokio"] }
fltk = "1.2"
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }