[package]
name = "async_std_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.4.24"
fltk-evented = { path = "../../..", features=["async-std"] }
async-std = { version = "1", features = ["attributes"] }
surf = "2"